// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffStat expandedCounts 1`] = `
<DocumentFragment>
  <div
    class="flex-1"
  >
    <span
      class="tooltip"
      data-state="closed"
      data-test-content="1 addition, 2 changes, 3 deletions"
      role="presentation"
    >
      <div
        aria-label="1 addition, 2 changes, 3 deletions"
        class="diffStat"
      >
        <strong
          class="a11y-ignore text-success mr-1"
        >
          +1
        </strong>
        <strong
          class="a11y-ignore text-warning mr-1"
        >
          •2
        </strong>
        <strong
          class="a11y-ignore text-danger"
        >
          −3
        </strong>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`DiffStat standard 1`] = `
<DocumentFragment>
  <div
    class="flex-1"
  >
    <span
      class="tooltip"
      data-state="closed"
      data-test-content="1 addition, 2 changes, 3 deletions"
      role="presentation"
    >
      <div
        aria-label="1 addition, 2 changes, 3 deletions"
        class="diffStat"
      >
        <small>
          8
        </small>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`DiffStatSquares 1`] = `
<DocumentFragment>
  <div
    class="squares"
  >
    <div
      class="square bg-success"
    />
    <div
      class="square bg-warning"
    />
    <div
      class="square bg-danger"
    />
    <div
      class="square bg-danger"
    />
    <div
      class="square bg-danger"
    />
  </div>
</DocumentFragment>
`;

exports[`DiffStatStack 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column align-items-center"
  >
    <div
      class="flex-1"
    >
      <span
        class="tooltip"
        data-state="closed"
        data-test-content="1 addition, 2 changes, 3 deletions"
        role="presentation"
      >
        <div
          aria-label="1 addition, 2 changes, 3 deletions"
          class="diffStat pb-1"
        >
          <strong
            class="a11y-ignore text-success mr-1"
          >
            +1
          </strong>
          <strong
            class="a11y-ignore text-warning mr-1"
          >
            •2
          </strong>
          <strong
            class="a11y-ignore text-danger"
          >
            −3
          </strong>
        </div>
      </span>
    </div>
    <div
      class="squares"
    >
      <div
        class="square bg-success"
      />
      <div
        class="square bg-warning"
      />
      <div
        class="square bg-danger"
      />
      <div
        class="square bg-danger"
      />
      <div
        class="square bg-danger"
      />
    </div>
  </div>
</DocumentFragment>
`;
